--- a/index.html
+++ b/index.html
@@ -4,22 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="First homework for CNIT 133">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <title>CNIT 133 HW1</title>
 </head>
 
 <body>
-    <h1>CNIT 133 Homework</h1>
-    <h2>Bryan Liang</h2>
-    <ul style="list-style-type: none; padding: 0;">
-        <li><a href="hw2.html" class="hwlink">Homework 2</a></li>
-        <li><a href="hw3.html" class="hwlink">Homework 3</a></li>
-        <li><a href="hw4.html" class="hwlink">Homework 4</a></li>
-        <li><a href="hw5.html" class="hwlink">Homework 5</a></li>
-        <li><a href="hw6.html" class="hwlink">Homework 6</a></li>
-        <li><a href="hw7.html" class="hwlink">Homework 7</a></li>
-        <li><a href="hw8.html" class="hwlink">Homework 8</a></li>
-    </ul>
+    <div class="container">
+        <div class="jumbotron jumbotron-fluid">
+            <div class="container">
+                <h1>CNIT 133 Homework</h1>
+                <h2>Bryan Liang</h2>
+            </div>
+        </div>
+        <ul class="list-group">
+            <li class="list-group-item"><a href="hw2.html" class="hwlink">Homework 2</a></li>
+            <li class="list-group-item"><a href="hw3.html" class="hwlink">Homework 3</a></li>
+            <li class="list-group-item"><a href="hw4.html" class="hwlink">Homework 4</a></li>
+            <li class="list-group-item"><a href="hw5.html" class="hwlink">Homework 5</a></li>
+            <li class="list-group-item"><a href="hw6.html" class="hwlink">Homework 6</a></li>
+            <li class="list-group-item"><a href="hw7.html" class="hwlink">Homework 7</a></li>
+            <li class="list-group-item"><a href="hw8.html" class="hwlink">Homework 8</a></li>
+        </ul>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
