--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h1>CNIT 133 Homework</h1>
+                <h1 class="text-info">CNIT 133 Homework</h1>
                 <h2>Bryan Liang</h2>
             </div>
         </div>
