--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             </div>
         </div>
         <ul class="list-group">
-            <li class="list-group-item"><a href="hw2.html" class="hwlink">Homework 2</a></li>
-            <li class="list-group-item"><a href="hw3.html" class="hwlink">Homework 3</a></li>
-            <li class="list-group-item"><a href="hw4.html" class="hwlink">Homework 4</a></li>
-            <li class="list-group-item"><a href="hw5.html" class="hwlink">Homework 5</a></li>
+            <li class="list-group-item"><a href="hw2.html" class="hwlink text-danger">Homework 2</a></li>
+            <li class="list-group-item"><a href="hw3.html" class="hwlink" style="color: #FFA500">Homework 3</a></li>
+            <li class="list-group-item"><a href="hw4.html" class="hwlink text-warning">Homework 4</a></li>
+            <li class="list-group-item"><a href="hw5.html" class="hwlink text-success">Homework 5</a></li>
             <li class="list-group-item"><a href="hw6.html" class="hwlink">Homework 6</a></li>
-            <li class="list-group-item"><a href="hw7.html" class="hwlink">Homework 7</a></li>
-            <li class="list-group-item"><a href="hw8.html" class="hwlink">Homework 8</a></li>
+            <li class="list-group-item"><a href="hw7.html" class="hwlink" style="color: #4B0082">Homework 7</a></li>
+            <li class="list-group-item"><a href="hw8.html" class="hwlink" style="color: #800080">Homework 8</a></li>
         </ul>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
