--- a/hw2.html
+++ b/hw2.html
@@ -20,7 +20,7 @@
                 <h2>Bryan Liang</h2>
             </div>
         </div>
-        Coming soon...
+        Part 1
     </div>
     
 
