--- a/hw7.html
+++ b/hw7.html
@@ -13,13 +13,36 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <h1><a href="index.html" class="text-info">CNIT133 Homework</a></h1>
-                <h2>Bryan Liang</h2>
-            </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand text-info" href="index.html">CNIT133</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Homeworks
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="hw2.html">Homework 2</a>
+                        <a class="dropdown-item" href="hw3.html">Homework 3</a>
+                        <a class="dropdown-item" href="hw4.html">Homework 4</a>
+                        <a class="dropdown-item" href="hw5.html">Homework 5</a>
+                        <a class="dropdown-item" href="hw6.html">Homework 6</a>
+                        <a class="dropdown-item" href="hw7.html">Homework 7</a>
+                        <a class="dropdown-item" href="hw8.html">Homework 8</a>
+                    </div>
+                </li>
+            </ul>
         </div>
+    </nav>
+    <div class="container">
         Coming soon...
     </div>
 
