instructions for extra credit

--- a/hw2.html
+++ b/hw2.html
@@ -222,6 +222,7 @@
                             <td class="ec-border ec-num"><input type="text" id="us-value"></td>
                         </tr>
                     </table id="ec">
+                    <p>Hit enter to submit.</p>
                 </form>
                 <div id="warning" class="text-danger displayNone">Please input a valid number.</div>
             </div>
