--- a/hw3.html
+++ b/hw3.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-
 </head>
 
 <body>
@@ -43,7 +42,224 @@
         </div>
     </nav>
     <div class="container">
-        Coming soon...
+        <div class="card">
+            <div class="card-header">
+                <ul class="nav nav-tabs card-header-tabs">
+                    <li class="nav-item">
+                        <a href="javascript:" class="nav-link active hw3-nav"
+                            onclick="changePart('hw3');active(this, 'hw3-nav');">Homework 3</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link hw3-nav" href="javascript:"
+                            onclick="changePart('hw3part1');active(this, 'hw3-nav');">Part
+                            1</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link hw3-nav" href="javascript:"
+                            onclick="changePart('hw3part2');active(this, 'hw3-nav');">Part
+                            2</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link hw3-nav" href="javascript:"
+                            onclick="changePart('hw3part3');active(this, 'hw3-nav');">Part
+                            3</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link hw3-nav" href="javascript:"
+                            onclick="changePart('hw3part4');active(this, 'hw3-nav');">Part 4</a>
+                    </li>
+                </ul>
+            </div>
+            <div id="hw3" class="part card-body">
+                Bryan Liang - CNIT132 Homework 3 Functions
+            </div>
+            <div id="hw3part1" class="part card-body" style="display:none">
+                <h3>Student Grades</h3>
+                <p>Create a webpage that calculates a student's grade based on the follow formula: <br>
+                    final average = (.5 * hwAvg) + (.2 * midExam) + (.2 * finalExam) + (.1 * participation) <br>
+                    Valid input should be an integer from 0-100. Display an error message for invalid data. <br>
+                    Display a grade based on the following critera: </p>
+                <table border="1">
+                    <tr>
+                        <td>Grade</td>
+                        <td>Letter</td>
+                    </tr>
+                    <tr>
+                        <td>90-100</td>
+                        <td>A</td>
+                    </tr>
+                    <tr>
+                        <td>80-89</td>
+                        <td>B</td>
+                    </tr>
+                    <tr>
+                        <td>70-79</td>
+                        <td>C</td>
+                    </tr>
+                    <tr>
+                        <td>60-69</td>
+                        <td>D</td>
+                    </tr>
+                    <tr>
+                        <td>0-59</td>
+                        <td>F</td>
+                    </tr>
+                </table>
+                <br>
+                <p>If the student's final grade is 'D' or 'F', display "Student must retake the course."</p>
+                <hr>
+                <form onsubmit="event.preventDefault(); calculateGrade()">
+                    <table>
+                        <tr>
+                            <td>Homework Average:</td>
+                            <td>
+                                <input type="number" id="hwAvg" min=0 max=100 class="form-control">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Midterm Exam:</td>
+                            <td>
+                                <input type="number" id="midExam" min=0 max=100 class="form-control">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Final Exam:</td>
+                            <td>
+                                <input type="number" id="finalExam" min=0 max=100 class="form-control">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>Participation:</td>
+                            <td>
+                                <input type="number" id="participation" min=0 max=100 class="form-control">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Final Grade:
+                            </td>
+                            <td>
+                                <textarea name="finalGrade" id="finalGrade" class="form-control" rows="2" cols="40"
+                                    readonly></textarea>
+                            </td>
+                        </tr>
+                    </table>
+                    <input type="submit" style="display:none">
+                    <input type="button" onclick="calculateGrade()" value="SUBMIT">
+                    <input type="reset" value="RESET">
+                </form>
+            </div>
+            <div id="hw3part2" class="part card-body" style="display:none">
+                <h3>Commission</h3>
+                <p>Create a webpage that contains a script that calculates the weekly earnings of an employee. This
+                    employee has a weekly wage of $200 and makes 9% commission on their total weekly sales. The value of
+                    the items are as follows:</p>
+                <table border="1">
+                    <tr>
+                        <td>Item</td>
+                        <td>Price</td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>239.99</td>
+                    </tr>
+                    <tr>
+                        <td>2 </td>
+                        <td>129.75</td>
+                    </tr>
+                    <tr>
+                        <td>3 </td>
+                        <td>99.95</td>
+                    </tr>
+                    <tr>
+                        <td>4 </td>
+                        <td>350.89</td>
+                    </tr>
+                </table>
+                <br>
+                <p>Have an input field for their name and an input field for the amount of items sold for each
+                    individual item. Display the total amount sold and the weekly earnings of the employee.</p>
+                <hr>
+                <h4>Part 2 Form</h4>
+                <form name="hw3part2form" id="hw3part2form">
+                    <label for="salesperson" class="control-label">Salesperson:</label>
+                    <input type="text" id="salesperson" name="salesperson"
+                        title="Please make sure that the salesperson's name is spelled correctly" .>
+                    <h6>Input the number of items sold for each item:</h6>
+                    <table>
+                        <tr>
+                            <td>
+                                <label for="item1">Item 1:</label>
+                                <input type="number" name="item1" id="item1">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <label for="item2">Item 2:</label>
+                                <input type="number" name="item2" id="item2">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <label for="item3">Item 3:</label>
+                                <input type="number" name="item3" id="item3">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <label for="item4">Item 4:</label>
+                                <input type="number" name="item4" id="item4">
+                            </td>
+                        </tr>
+                    </table>
+                    <input type="submit" style="display:none">
+                    <input type="submit" value="SUBMIT">
+                    <input type="reset" value="RESET">
+                </form>
+                <table>
+                    <tr>
+                        <td><strong>Item#</strong></td>
+                        <td><strong>Price</strong></td>
+                        <td><strong>Number Sold</strong></td>
+                        <td><strong>Total</strong></td>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>$239.99</td>
+                        <td><input type="text" id="numberSold1" readonly></td>
+                        <td><input type="text" id="total1" readonly></td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>$129.75</td>
+                        <td><input type="text" id="numberSold2" readonly></td>
+                        <td><input type="text" id="total2" readonly></td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>$99.95</td>
+                        <td><input type="text" id="numberSold3" readonly></td>
+                        <td><input type="text" id="total3" readonly></td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>$350.89</td>
+                        <td><input type="text" id="numberSold4" readonly></td>
+                        <td><input type="text" id="total4" readonly></td>
+                    </tr>
+                    <tr>
+                        <td colspan="3">Total Amount Sold:</td>
+                        <td><input type="text" id="totalSold" readonly></td>
+                    </tr>
+                    <tr>
+                        <td colspan="3">Total Weekly Earnings:</td>
+                        <td><input type="text" id="totalEarnings" readonly></td>
+                    </tr>
+                </table>
+            </div>
+            <div id="hw3part3" class="part card-body" style="display:none"></div>
+            <div id="hw3part4" class="part card-body" style="display:none"></div>
+        </div>
     </div>
 
 
@@ -56,6 +272,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
     </script>
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+    <script src="scripts.js"></script>
 </body>
 
 </html>
