hw3 potentially done

--- a/hw3.html
+++ b/hw3.html
@@ -278,7 +278,26 @@
                     <input type="text" name="temperatureResult" id="temperatureResult" readonly>
                 </form>
             </div>
-            <div id="hw3part4" class="part card-body" style="display:none"></div>
+            <div id="hw3part4" class="part card-body" style="display:none">
+                <div id="hw3part4question">
+                    <h3>Multiplication</h3>
+                    <p>Write a program that will help an elementary school student learn multiplication. Use Math.random
+                        to produce two one-digit integers (0-9). </p>
+                    <p>The student then types the answer into an input box. Your program checks the student's answer. If
+                        it is correct, display the message "Very good!" in a text area or another part of the page, and
+                        then prompt the user to see whether they wish to continue by using the confirm statement. If
+                        true, then generate a new question. If not, then exit the script and do not present another
+                        question.</p>
+                    <p>
+                        If the answer to the multiplication question is wrong, display the message "No. Please try
+                        again." directly on the page in a textarea or another part of the page, and let the student try
+                        the same question again repeatedly until the student finally gets it right.
+                    </p>
+                    <hr>
+                </div>
+                <div class="multiplicationQuestion"></div>
+                <div id="hw3part4response"></div>
+            </div>
         </div>
     </div>
 
