add button to part 4 hw 3

--- a/hw4.html
+++ b/hw4.html
@@ -43,7 +43,30 @@
         </div>
     </nav>
     <div class="container">
-        Coming soon...
+        <div class="card">
+            <div class="card-header">
+                <ul class="nav nav-tabs card-header-tabs">
+                    <li class="nav-item">
+                        <a href="javascript:" class="nav-link active hw4-nav"
+                            onclick="changePart('hw4');active(this, 'hw4-nav');">Homework 4</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link hw4-nav" href="javascript:"
+                            onclick="changePart('hw4part1');active(this, 'hw4-nav');">Part
+                            1</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link hw4-nav" href="javascript:"
+                            onclick="changePart('hw4part2');active(this, 'hw4-nav');">Part
+                            2</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link hw4-nav" href="javascript:"
+                            onclick="changePart('hw4ec');active(this, 'hw4-nav');">Extra Credit</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 
 
