--- a/hw3.html
+++ b/hw3.html
@@ -79,7 +79,7 @@
                     final average = (.5 * hwAvg) + (.2 * midExam) + (.2 * finalExam) + (.1 * participation) <br>
                     Valid input should be an integer from 0-100. Display an error message for invalid data. <br>
                     Display a grade based on the following critera: </p>
-                <table border="1">
+                <table id="hw3part1table">
                     <tr>
                         <td>Grade</td>
                         <td>Letter</td>
@@ -108,30 +108,30 @@
                 <br>
                 <p>If the student's final grade is 'D' or 'F', display "Student must retake the course."</p>
                 <hr>
-                <form onsubmit="event.preventDefault(); calculateGrade()">
+                <form onsubmit="event.preventDefault(); calculateGrade()" id="hw3part1form">
                     <table>
                         <tr>
                             <td>Homework Average:</td>
                             <td>
-                                <input type="number" id="hwAvg" min=0 max=100 class="form-control">
+                                <input type="number" id="hwAvg" name="hwAvg" min=0 max=100 class="form-control">
                             </td>
                         </tr>
                         <tr>
                             <td>Midterm Exam:</td>
                             <td>
-                                <input type="number" id="midExam" min=0 max=100 class="form-control">
+                                <input type="number" id="midExam" name="midExam" min=0 max=100 class="form-control">
                             </td>
                         </tr>
                         <tr>
                             <td>Final Exam:</td>
                             <td>
-                                <input type="number" id="finalExam" min=0 max=100 class="form-control">
+                                <input type="number" id="finalExam" name="finalExam" min=0 max=100 class="form-control">
                             </td>
                         </tr>
                         <tr>
                             <td>Participation:</td>
                             <td>
-                                <input type="number" id="participation" min=0 max=100 class="form-control">
+                                <input type="number" id="participation" name="participation" min=0 max=100 class="form-control">
                             </td>
                         </tr>
                         <tr>
@@ -145,7 +145,7 @@
                         </tr>
                     </table>
                     <input type="submit" style="display:none">
-                    <input type="button" onclick="calculateGrade()" value="SUBMIT">
+                    <input type="submit" value="SUBMIT">
                     <input type="reset" value="RESET">
                 </form>
             </div>
@@ -154,7 +154,7 @@
                 <p>Create a webpage that contains a script that calculates the weekly earnings of an employee. This
                     employee has a weekly wage of $200 and makes 9% commission on their total weekly sales. The value of
                     the items are as follows:</p>
-                <table border="1">
+                <table id="hw3part2table">
                     <tr>
                         <td>Item</td>
                         <td>Price</td>
